fix(android): enable generated resources and keep API 26 Java compatibility